Update chat form for email forwarding
Enable email forwarding via FormSubmit

--- a/index.html
+++ b/index.html
@@ -353,7 +353,14 @@
     <section id="chat" class="section container hidden">
       <h2><i class="fas fa-comments"></i> Chat with Me</h2>
       <div class="chat-card">
-        <form class="chat-form" onsubmit="event.preventDefault();">
+        <!-- The form below posts to FormSubmit to send the message to the site owner via email. -->
+        <!-- Remove the default event.preventDefault to allow the form to submit. -->
+        <!-- You can customise the _next value to redirect to a confirmation message after submission. -->
+        <form class="chat-form" action="https://formsubmit.co/vedantvish07@gmail.com" method="POST">
+          <!-- Redirect back to the site after submission -->
+          <input type="hidden" name="_next" value="https://muraskii.github.io/portfolio/#chat-success">
+          <!-- Disable CAPTCHA to streamline the user experience -->
+          <input type="hidden" name="_captcha" value="false">
         <div class="name-fields">
           <div class="form-group">
             <label for="first-name">First Name <span class="required">(required)</span></label>
