--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <i class="fas fa-phone"></i>
         <span>+91&nbsp;97171&nbsp;92160</span>
       </a>
-      <a href="https://linkedin.com/in/vedant-vishwakarma" target="_blank" rel="noopener" class="contact-item">
+      <a href="https://www.linkedin.com/in/vedant-vishwakarma-286470185/" target="_blank" rel="noopener" class="contact-item">
         <i class="fab fa-linkedin"></i>
         <span>LinkedIn</span>
       </a>
