Update contact form _next path to aboutvedant

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <!-- You can customise the _next value to redirect to a confirmation message after submission. -->
         <form class="chat-form" action="https://formsubmit.co/vedantvish07@gmail.com" method="POST">
           <!-- Redirect back to the site after submission -->
-          <input type="hidden" name="_next" value="https://muraskii.github.io/portfolio/#chat-success">
+          <input type="hidden" name="_next" value="https://muraskii.github.io/aboutvedant/#chat-success">
           <!-- Disable CAPTCHA to streamline the user experience -->
           <input type="hidden" name="_captcha" value="false">
         <div class="name-fields">
